delete topic, update config
