# src/main/resources/openapi.json
@@ -1,8 +1,8 @@
 {
     "openapi": "3.0.0",
     "info": {
-      "title": "Strimzi Kafka Bridge API Reference",
-      "description": "The Strimzi Kafka Bridge provides a REST API for integrating HTTP based client applications with a Kafka cluster. You can use the API to create and manage consumers and send and receive records over HTTP rather than the native Kafka protocol. ",
+        "title": "Strimzi Kafka Bridge API Reference",
+        "description": "The Strimzi Kafka Bridge provides a REST API for integrating HTTP based client applications with a Kafka cluster. You can use the API to create and manage consumers and send and receive records over HTTP rather than the native Kafka protocol. ",
         "version": "0.1.0"
     },
     "paths": {
@@ -748,20 +748,159 @@
                     "content": {
                         "application/vnd.kafka.json.v2+json": {
                             "schema": {
-                                "$ref": "#/components/schemas/ProducerRecordList"
+                                "$ref": "#/components/schemas/KafkaConfigBody"
                             }
                         },
                         "application/vnd.kafka.binary.v2+json": {
                             "schema": {
-                                "$ref": "#/components/schemas/ProducerRecordList"
+                                "$ref": "#/components/schemas/KafkaConfigBody"
                             }
                         }
                     },
-                    "required": false
+                    "required": true
                 },
                 "responses": {
                     "200": {
+                        "description": "Create topic successfully."
+                    },
+                    "404": {
+                        "description": "The specified topic was not found.",
+                        "content": {
+                            "application/vnd.kafka.v2+json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/Error"
+                                },
+                                "examples": {
+                                    "response": {
+                                        "value": {
+                                            "error_code": 404,
+                                            "message": "The specified topic was not found."
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    "422": {
+                        "description": "The record list is not valid.",
+                        "content": {
+                            "application/vnd.kafka.v2+json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/Error"
+                                },
+                                "examples": {
+                                    "response": {
+                                        "value": {
+                                            "error_code": 422,
+                                            "message": "The record list contains invalid records."
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "tags": [
+                    "Topics"
+                ],
+                "description": "Delete topic",
+                "operationId": "deleteTopic",
+
+                "responses": {
+                    "200": {
                         "description": "Create topic successfully.",
+                        "content": {
+                            "application/vnd.kafka.v2+json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/OffsetRecordSentList"
+                                },
+                                "examples": {
+                                    "response": {
+                                        "value": {
+                                            "offsets": [
+                                                {
+                                                    "partition": 2,
+                                                    "offset": 0
+                                                },
+                                                {
+                                                    "partition": 1,
+                                                    "offset": 1
+                                                },
+                                                {
+                                                    "partition": 2,
+                                                    "offset": 2
+                                                }
+                                            ]
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "The specified topic was not found.",
+                        "content": {
+                            "application/vnd.kafka.v2+json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/Error"
+                                },
+                                "examples": {
+                                    "response": {
+                                        "value": {
+                                            "error_code": 404,
+                                            "message": "The specified topic was not found."
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    "422": {
+                        "description": "The record list is not valid.",
+                        "content": {
+                            "application/vnd.kafka.v2+json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/Error"
+                                },
+                                "examples": {
+                                    "response": {
+                                        "value": {
+                                            "error_code": 422,
+                                            "message": "The record list contains invalid records."
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+            },
+            "put": {
+                "tags": [
+                    "Topics"
+                ],
+                "description": "Update topic",
+                "operationId": "updateTopicConfigs",
+                "requestBody": {
+                    "content": {
+                        "application/vnd.kafka.json.v2+json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/KafkaConfigBody"
+                            }
+                        },
+                        "application/vnd.kafka.binary.v2+json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/KafkaConfigBody"
+                            }
+                        }
+                    },
+                    "required": true
+                },
+                "responses": {
+                    "200": {
+                        "description": "Update topic successfully.",
                         "content": {
                             "application/vnd.kafka.v2+json": {
                                 "schema": {
@@ -1857,6 +1996,24 @@
                             "offset": 91
                         }
                     ]
+                }
+            },
+            "KafkaConfigBody": {
+                "title": "KafkaConfigBody",
+                "type": "object",
+                "properties": {
+                    "topic": {
+                        "type": "string"
+                    },
+                    "partitions": {
+                        "type": "integer"
+                    },
+                    "replicationFactor": {
+                        "type": "integer"
+                    },
+                    "configs": {
+                        "type": "object"
+                    }
                 }
             },
             "OffsetsSummary": {
